force-app/main/default/objects/Docket_Report_External__c/Docket_Report_External__c.object-meta.xml
<CustomObject>
    <label>Docket Report External</label>
    <nameField>
        <displayFormat>DRN-{00000000}</displayFormat>
        <label>Docket Report External Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docket Report External</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>