force-app/main/default/objects/Docket_Report_External__c/fields/Attorney_Comments__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Comments__c</fullName>
    <label>Attorney Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>