force-app/main/default/objects/Docket_Report_External__c/fields/Can_Edit_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Email_Content__c</fullName>
    <formula>OR(
  AND(
    ISPICKVAL(Status__c, &quot;Initiated&quot;),
    $User.Id = Assigned_To__c
  ),
  AND(
    ISPICKVAL(Status__c, &quot;Requested Changes&quot;),
    $User.Id = CreatedById
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Edit Email Content?</label>
    <type>Checkbox</type>
</CustomField>