force-app/main/default/objects/Docket_Report_External__c/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <label>CC Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>