force-app/main/default/objects/Docket_Report_External__c/fields/Docketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Docketing_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Docketing Activity</label>
    <referenceTo>SymphonyLF__Docketing_Activity__c</referenceTo>
    <relationshipLabel>Docket Report External</relationshipLabel>
    <relationshipName>Docket_Report_External</relationshipName>
    <type>Lookup</type>
</CustomField>