force-app/main/default/objects/Docket_Report_External__c/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <label>Email Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>