force-app/main/default/objects/Docket_Report_External__c/fields/Is_Assigned_or_Creator__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned_or_Creator__c</fullName>
    <formula>OR(
  $User.Id    = Assigned_To__c,
  $User.Id    = CreatedById,
  $Profile.Name = &quot;System Administrator&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned or Creator</label>
    <type>Checkbox</type>
</CustomField>