force-app/main/default/objects/Docket_Report_External__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Review in Progress</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Requested Changes</fullName>
            </value>
            <value>
                <fullName>Reported Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>